logs/20251015T181116/syslog
2025-10-15 18:11:16,189 [Logger](CRITICAL): Uncaught exception
Traceback (most recent call last):
  File "./backseat_app/main.py", line 22, in <module>
    from backseat_app.processing import MarlProcessor
  File "/home/maiv/lrauv_sim/lrauv-backseat-marl/backseat_app/processing.py", line 173
    self.latcall = self.sim_timestamp+0.
    ^
SyntaxError: invalid syntax
